# modern-arduino

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: avr-functions.cmake  avr-toolchain.cmake
uno/: CMakeLists.txt
uno/blink/: CMakeLists.txt  Makefile  blink_led.cpp
uno/libftd/: CMakeLists.txt  cstddef  type_traits  various
uno/libftd/include/: array.h  various.h
uno/libmorse/: CMakeLists.txt  morse.cpp  morse.h
